# test-solidspy-opt

./: AUTHORS.rst  pyproject.toml
.github/workflows/: python-publish.yml
conda-recipe/: meta.yaml
src/solidspy_opt/: __init__.py  models.py  optimize.py
src/solidspy_opt/Utils/: __init__.py  solver.py
tests/: test.py  test_optimize.py
